sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but 'else' found.
		else {echange(x, x+1)
                ^